# mobile_moveo_ros2

./: README.md
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
robot_description/launch/: joystick.launch.py  launch_sim.launch.py  navigation_launch.py  rsp.launch.py
robot_description/meshes/: Gripper_Idol_Gear.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Pivot_Arm_Gripper_Servo.STL  Tip_Gripper_Idol.STL  base_link.STL
robot_description/urdf/: example_gazebo.xacro  example_robot.urdf.xacro  lidar.xacro  robot_core copy.xacro.old  robot_core.xacro  robot_core.xacro.scan  robot_description.urdf  robot_description.xacro  robot_ignition.sdf  robot_ignition.sdf.old  robot_ignition.urdf  robot_ignition.xacro  robot_ignition1.sdf  robot_ignition_plugins.xacro  robot_ignition_test.sdf  robot_ignition_with_world.sdf  ros2_control.xacro
robot_ignition/: CMakeLists.txt  package.xml
robot_ignition/config/: navigation copy 2.yaml  navigation copy.yaml  navigation.yaml
robot_ignition/launch/: ignition.launch.py  navigation.launch.py
robot_ignition/src/: robot_sticky_static_tf_publisher.cpp
robot_ignition/worlds/: pick_place_world.sdf
robot_ignition_control/: package.xml  setup.cfg  setup.py
robot_ignition_control/robot_ignition_control/: robot_ignition_control_action_server.py
robot_moveit_config/: .setup_assistant  package.xml
robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_simple_controllers.yaml  robot.ros2_control.xacro  robot.xacro  robot_description.srdf  ros2_controllers.yaml
robot_moveit_config/launch/: demo_ignition.launch.py
robot_my_ros_demos/: CMakeLists.txt  package.xml
robot_my_ros_demos/launch/: my_move_group_interface_demo.launch.py  my_move_group_interface_demo_sim.launch.py
robot_my_ros_demos/src/: move_group_interface_demo.cpp  my_move_group_interface_demo.cpp  my_pick_and_place_trial copy.cpp  my_pick_and_place_trial.cpp
